name:                brainfuck
version:             0.1.0.0
synopsis:            A Brainfuck interpreter written in Haskell
homepage:            github.com/sivawashere/brainfuck
license:             BSD3
license-file:        LICENSE
author:              Siva Somayyajula
maintainer:          siva.somayyajula@gmail.com
copyright:           (c) 2015 Siva Somayyajula
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable brainfuck
  main-is:             Main.hs
  other-extensions:    LambdaCase, RecordWildCards
  build-depends:       base >=4.7 && <4.8, vector >=0.10 && <0.11, mtl >=2.1 && <2.2, bytestring >=0.10 && <0.11, attoparsec >=0.11 && <0.12
  hs-source-dirs:      src
  default-language:    Haskell2010